Revert "Merge branch 'partner-notice-banner'"
This reverts commit 3c41b28cad1c85228715fafe9074583dba41dfd3, reversing
changes made to b96cd5e7306c2ab6687020b38c750b70caab4a10.

--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -56,7 +56,7 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   @include clearfix;
 }
 .header a {
-  color: #eee;
+  color: #fff;
   display: inline-block;
 }
 .header img {
