--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -2,7 +2,7 @@
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
-    <a href="<%= vars.title_href %>" class="global-header-title">
+    <a href="/" class="global-header-title">
       <%= vars.title %>
     </a>
     <div class="btn-menu" data-behavior="MenuMobile"></div>
