--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -5,7 +5,7 @@
  ======================================================================== */
 
 header.global-header {
-  background-color: $global_header_bg_color;
+  background-color: #232B2F;
   line-height: 64px;
   padding: 0;
   border: none;
