changed vertical-align from  to  [#140360087]

--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -60,7 +60,7 @@ header.global-header {
   }
 
   .embedded-searchbar {
-    vertical-align: baseline;
+    vertical-align: middle;
     margin-bottom: 5px;
 
     @media(min-width: $bp-wide) {
