--- a/source/stylesheets/partials/_local-header.scss
+++ b/source/stylesheets/partials/_local-header.scss
@@ -52,7 +52,7 @@
 }
 
 .local-header.local-version {
-  font-size: 16px;
+  font-size: x-large;
   margin-left: 15px;
   a {
     color: $color-text;
@@ -72,6 +72,7 @@
 .local-header.local-title .local-version.header-dropdown .local-header.header-dropdown-content {
   left: 0;
   float: none;
+  font-size: initial;
   padding: 0;
   background-color: #F5F6F7;
   border: none;
