--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -22,10 +22,10 @@
         <% if elastic_search? %>
           <form method="get" action="/search">
             <input name="q" placeholder="<%= product_info['search_placeholder'] || 'Search' %>" class="search-box" />
-            <% unless product_info['local_header_title'].nil? %>
+            <% if !product_info['local_header_title'].nil? %>
               <input type="hidden" name="product_name" value="<%= product_info['local_header_title'] %>" />
             <% end %>
-            <% unless product_info['local_product_version'].nil? %>
+            <% if !product_info['local_product_version'].nil? %>
               <input type="hidden" name="product_version" value="<%= product_info['local_product_version'] %>"/>
             <% end %>
           </form>
