--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" %>
+<% if vars.use_global_header && current_page.data.owner != "Pivotal HD" %>
   <% if current_page.path.include? "partners" %>
   <header class="partners-global-header header header-layout js-bar-links">
   <% else %>
