--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -541,6 +541,7 @@ code {
   margin: 0.2em 0.1em 0.1em;
   padding: 0 0.4em 0 0.4em;
   vertical-align: text-top;
+  word-break: break-word;
 }
 code a {
   color: #fefefe;
