--- a/source/layouts/_header-without-nyse.erb
+++ b/source/layouts/_header-without-nyse.erb
@@ -1,135 +1,3 @@
-
-<style>
-@media (min-width: 43.75em) {
-  .header-layout {
-    top: 67px;
-  }
-}
-@media (max-width: 800px) {
-  .header-layout {
-    top: 82px;
-  }
-}
-@media(max-width: 699px) {
-  header.header-home-global {
-    margin-top: 0;
-  }
-}
-#pvtl-nyse {
-  background: #00ae9e;
-  padding: 9px 0 12px;
-  display: block;
-  font-size: 18px;
-  text-align: center;
-  transition: all .2s;
-  -webkit-transition: all .2s;
-  -moz-transition: all .2s;
-  -o-transition: all .2s;
-  -ms-transition: all .2s;
-  text-decoration: none;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 2;
-}
-#pvtl-nyse:hover {
-  background: #00cec2;
-}
-#pvtl-nyse .container {
-  padding: 0 20px;
-  margin: 0 auto;
-  max-width: 1140px;
-  background-color: transparent;
-}
-#pvtl-nyse img {
-  height: 44px;
-  max-width: 44px;
-  margin: 0 10px 0 5px;
-}
-#pvtl-nyse img,
-#pvtl-nyse .text,
-#pvtl-nyse p,
-#pvtl-nyse h5,
-#pvtl-nyse .arrow {
-  display: inline-block;
-}
-#pvtl-nyse p {
-  color: white;
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  margin: 10px 0;
-  padding: 0 15px;
-  font-weight: 600;
-  font-size: 18px;
-}
-#pvtl-nyse h5 {
-  color: #00253e;
-  text-transform: uppercase;
-  font-size: 15px;
-  font-weight: 600;
-}
-#pvtl-nyse .arrow {
-  margin: 0 0 0 8px;
-  width: 28px;
-  height: 12px;
-}
-#pvtl-nyse .arrow .cls-1 {
-  stroke: #00253e;
-  fill: none;
-  stroke-miterlimit: 10;
-}
-@media(max-width: 800px) {
-  #pvtl-nyse {
-    padding: 10px 0;
-    overflow: hidden;
-  }
-  #pvtl-nyse p {
-    font-size: 14px;
-    border-left: none;
-    text-align: left;
-    padding: 0 0 2px;
-    line-height: 1.3em;
-    margin: 0;
-  }
-  #pvtl-nyse img {
-    margin: 5px auto;
-    float: left;
-  }
-  #pvtl-nyse .arrow {
-    display: none;
-  }
-  #pvtl-nyse .container {
-    max-width: 280px;
-    width: 100%;
-  }
-  #pvtl-nyse .text {
-    float: left;
-    text-align: left;
-    max-width: 190px;
-    padding: 0 0 0 15px;
-  }
-  #pvtl-nyse h5 {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    display:block;
-  }
-}
-</style>
-<a target="_blank" id="pvtl-nyse" href="https://content.pivotal.io/announcements/pivotal-software-lists-on-nyse-as-pvtl">
-  <div class="container">
-    <img src="https://d1fto35gcfffzn.cloudfront.net/images/global/pvtl-nyse.svg">
-    <div class="text">
-      <p>Thank you to all the people building the future with us.</p>
-      <h5>Read More</h5>
-      <svg class="arrow" viewBox="0 0 23.9 10.47" xmlns="http://www.w3.org/2000/svg">
-        <polyline class="cls-1" points="18.31 0.35 23.19 5.24 18.31 10.12"></polyline>
-        <line class="cls-1" x1="17.35" y1="5.39" y2="5.39"></line>
-      </svg>
-    </div>
-  </div>
-</a>
-
 <% if vars.use_global_header && current_page.data.owner != "Pivotal HD" %>
   <% if current_page.path.include? "partners" %>
   <header class="partners-global-header header header-layout js-bar-links">
@@ -170,6 +38,9 @@
   </header>
   <% if !current_page.data.title %>
     <header class="header-home-global">
+      <h2 class="title-intro">
+        <%= vars.hero_text %>
+      </h2>
     </header>
   <% end %>
 <% else %>
