add 'Cookie Preferences' link for GDPR [#157447535]

--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -1,6 +1,11 @@
 <div class="copyright">
   <a href='https://pivotal.io/privacy-policy'>Privacy Policy</a> | 
-  <a href='https://pivotal.io/terms-of-use'>Terms of Use</a><br/>
+  <a href='https://pivotal.io/terms-of-use'>Terms of Use</a>
+  <div id="teconsent"></div>
+    <script async="async" src=//consent.trustarc.com/notice?domain=pivotal.com&c=teconsent&js=nj&text=true&pcookie crossorigin="">
+</script>
+
+  <br/>
   <a href='/'>Pivotal Documentation</a>
   &copy; <%= Time.now.year %> <a href='https://pivotal.io'>Pivotal Software</a>, Inc. All Rights Reserved.
 </div>
