Changed layout banner to RELEASE NOTES [#158702222]

--- a/source/layouts/_local-header.erb
+++ b/source/layouts/_local-header.erb
@@ -1,7 +1,7 @@
 <% if product_info['use_local_header'] %>
   <div class="local-header title-container">
     <div class="local-header version-info">
-      LATEST VERSION: <%= product_info['latest_stable_version'] %> - <a href="<%= product_info['changelog_href'] %>">CHANGELOG</a>
+      LATEST VERSION: <%= product_info['latest_stable_version'] %> - <a href="<%= product_info['changelog_href'] %>">RELEASE NOTES</a>
     </div>
     <div class="local-header local-title clearfix">
       <img src="<%= product_info['local_header_img'] %>">
