--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -80,16 +80,20 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
 
 // header links
 .header-links {
-  @media (min-width: $bp-wide) {
+  @media (min-width: $bp-medium) {
     float: right;
     text-align: right;
-    width: 50%;
   }
 }
 .btn-menu {
   float: right;
   position: relative;
   right: -1em;
+  display: block;
+  padding: 0 1em;
+  @media (min-width: $bp-medium) {
+    display: none;
+  }
   &:before {
     content: $fa-var-bars;
     @extend .fa;
@@ -98,10 +102,6 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   }
   &:hover {
     cursor: pointer;
-  }
-  padding: 0 1em;
-  @media (min-width: $bp-wide) {
-    display: none;
   }
 }
 .menu-active .btn-menu {
@@ -126,8 +126,19 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   }
 }
 .menu-active .header-item {
+  display: block !important;
   @media (max-width: $bp-wide) {
     display: block;
+  }
+  @media(max-width: $bp-medium) {
+    a {
+      display: block;
+      padding: 0.5em 0;
+    }
+  }
+  &#search-header-item,
+  &#docs-header-item {
+    display: none !important;
   }
 }
 .header-item:after {
@@ -140,6 +151,7 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
     content: "";
   }
 }
+
 
 /*doc
 ---
@@ -367,7 +379,6 @@ category: basics
 }
 
 .embedded-searchbar {
-  margin-right: 0.5em;
 
   .gsc-search-box {
     padding: 0;
