Revert "Merge pull request #46 from jacksoncvm/master"
This reverts commit 0bf4e87f204bffbd63ca066fb07ddfa610aaa95d, reversing
changes made to 6a86c592ceabd0f6ada93ff7d147ad20cef79394.

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -4,50 +4,36 @@
   <% else %>
   <header class="global-header header header-layout js-bar-links">
   <% end %>
-    <div class='super-nav'>
-      <div class='container'>
-        <a href="/" class="global-header-title">
-          <%= vars.title %>
-        </a>
-        <div class="btn-menu" data-behavior="MenuMobile"></div>
-        <div class='header-links'>
-          <div class='header-item' id='search-header-item'>
-            <div class='search-icon'></div>
-            <form id="header-search" action="https://pivotal.io/search.html" accept-charset="UTF-8" method="get">
-              <input name="utf8" type="hidden" value="✓">
-              <input type="text" name="q" autocomplete="off">
-              <input type="submit" value="" data-disable-with="">
-            </form>
-          </div>
-          <div class="header-item" id='docs-header-item'>
-            <a href='https://docs.pivotal.io'>Documentation</a>
-          </div>
-          <div class="header-item">
-            <a href="https://network.pivotal.io">Downloads</a>
-          </div>
-          <div class="header-item">
-            <a href="https://pivotal.io/support">Support</a>
-          </div>
-          <div class='header-item'>
-            <a href="https://login.run.pivotal.io">Sign In / Register</a>
-          </div>
-          <div class='header-item' id='contact-header-item'>
-            <a href='https://pivotal.io/contact'>Contact Us</a>
-          </div>
-          <div class='header-item embedded-searchbar'>
-            <form action="https://pivotal.io/search.html" accept-charset="UTF-8" method="get">
-              <input name="utf8" type="hidden" value="✓">
-              <input type="text" name="q" autocomplete="off" placeholder="Search">
-              <input type="submit" value="" data-disable-with="">
-            </form>
-          </div>
-        </div>
+    <a class="pivotal-logo" href="/">
+    </a>
+    <a href="/" class="global-header-title">
+      <%= vars.title %>
+    </a>
+    <div class="btn-menu" data-behavior="MenuMobile"></div>
+    <div class="header-links">
+      <div class="header-item">
+        <a href="<%= vars.global_header_product_href %>"><%= vars.global_header_product_link_text %></a>
       </div>
-    </div>
-    <div class='container index-page-logo'>
-      <a href="/" class="global-header-title">
-        <%= vars.title %>
-      </a>
+      <div class="header-item">
+        <%= vars.support_link %>
+      </div>
+
+      <div class="header-item embedded-searchbar">
+        <% if elastic_search? %>
+          <form method="get" action="/search">
+            <input name="q" placeholder="<%= product_info['search_placeholder'] || 'Search' %>" class="search-box" />
+            <% if !product_info['local_header_title'].nil? %>
+              <input type="hidden" name="product_name" value="<%= product_info['local_header_title'] %>" />
+            <% end %>
+            <% if !product_info['local_product_version'].nil? %>
+              <input type="hidden" name="product_version" value="<%= product_info['local_product_version'] %>"/>
+            <% end %>
+          </form>
+        <% else %>
+          <gcse:searchbox></gcse:searchbox>
+        <% end %>
+      </div>
+      
     </div>
   </header>
   <% if !current_page.data.title %>
