--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -1,32 +1,12 @@
 /*
  * FILE: _footer.scss
 ======================================================================== */
-
 .site-footer-links {
   font-size: $font-size-xs;
   clear: both;
-  padding: 1em 0 4em;
-  overflow: hidden;
+  padding: 1em 30px 4em 30px;
   a {
     color: $color-text;
-  }
-}
-
-.has-subnav .site-footer-links {
-  margin-left: 31em;
-   @media(max-width:899px) {
-      margin-left: 24em;
-   }  
-   @media (max-width: $bp-small) {
-      margin-left: 0;
-   }
-  .support {
-    margin-top: 36px;
-    @media(max-width:1400px) {
-      margin-top: 20px;
-      float: left;
-      width: 100%;
-    }
   }
 }
 
@@ -39,7 +19,6 @@
 .support {
   @media (min-width: $bp-wide) {
     float: right;
-    margin-top: 50px;
   }
 }
 
