--- a/source/layouts/_local-header.erb
+++ b/source/layouts/_local-header.erb
@@ -7,7 +7,7 @@
       <img src="<%= product_info['local_header_img'] %>">
       <span class="local-header-title"><%= product_info['local_header_title'] %>
       </span>
-      <span class="local-header local-version header-dropdown">
+      <span onClick="return true" class="local-header local-version header-dropdown">
         <a class="local-header header-dropdown-link">v<%= product_info['local_product_version'] || product_info['latest_stable_version'] %></a>
         <span class="local-header header-dropdown-content">
           <ul>
