--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -580,9 +580,6 @@ hr {
   @media(min-width:992px) {
     width: 100% !important;
   }
-  @media(min-width:992px) {
-    width: 100% !important;
-  }
 }
 
 .content-layout {
@@ -592,25 +589,46 @@ hr {
   }
 }
 
-.has-subnav .container {
+.has-subnav .header .container {
+  margin-left: auto;
+  padding: 0 20px !important;
+  width: 100% !important;
   @media (min-width: $bp-wide) {
     margin-left: auto;
   }
 }
 
-.has-subnav .content-layout {
-  margin-left: 22.9375em !important;
-  @media (min-width: $bp-wide) {
-    margin-left: 22.9375em;
+.has-subnav .container {
+  @media (min-width: 1122px) {
+    margin-left: auto;
   }
-  @media(max-width:899px) {
-    margin-left: 17.375em !important;
+  @media(max-width: 1121px) {
+    width: auto !important;
+    padding: 0 !important;
+  }
+  @media(max-width: $bp-small) {
+    padding: 0 20px !important;
   }
 }
 
+.has-subnav .content-layout {
+  @media (min-width: 1122px) {
+    margin-left: 22.9375em;
+  }
+  @media(max-width: 899px) {
+    margin-left: 0;
+  }
+}
+
+.partners.has-subnav .content-layout {
+  @media(min-width: $bp-wide) {
+    padding-top: 2em;
+  }
+} 
+
 .nav-container {
   left: 0;
-  @media (min-width: $bp-wide) {
+  @media (min-width: 1122px) {
     left: auto;
   }
 }
