--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -163,6 +163,8 @@ header.global-header {
     margin: 0;
     @media (min-width: $bp-medium) {
       margin: 7px 0 0;
+      float: right;
+      text-align: right;
     }
     a {
       font-weight: normal;
@@ -187,7 +189,6 @@ header.global-header {
   .btn-menu {
     padding-top: 0.2em;
     padding-left: 0;
-
     &:before {
       font-size: $font-size-l;
     }
@@ -202,9 +203,12 @@ header.global-header {
 
 header.partners-global-header {
   background-color: #00a79d;
-  line-height: 64px;
+  line-height: 40px;
   padding: 0;
   border: none;
+  @media(min-width: $bp-small) {
+    line-height: 64px;
+  }
 
   > a, .header-item {
     font-size: 18px;
@@ -216,8 +220,12 @@ header.partners-global-header {
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 100%;
-    height: 64px;
-    width: 64px;
+    height: 40px;
+    width: 40px;
+    @media(min-width: $bp-small) {
+      height: 64px;
+      width: 64px;
+    }
   }
 
   .global-header-title {
@@ -233,6 +241,13 @@ header.partners-global-header {
       padding-left: 0;
       line-height: 64px;
     }
+    @media (max-width: $bp-medium) {
+      display: none;
+      line-height: initial;
+      a {
+        margin-left: 0;
+      }
+    }
   }
 
   .header-item:after {
@@ -240,6 +255,7 @@ header.partners-global-header {
   }
 
   .header-links {
+    width: auto;
     a {
       font-weight: normal;
     }
@@ -247,6 +263,11 @@ header.partners-global-header {
 
   a {
     border: none;
+    font-size: 14px;
+    vertical-align: top;
+    @media(min-width: $bp-small) {
+      font-size: 18px;
+    }
   }
 
   .nav-container {
@@ -259,13 +280,22 @@ header.partners-global-header {
     vertical-align: middle;
     margin-bottom: 5px;
 
-    @media(min-width: $bp-wide) {
+    @media(min-width: $bp-medium) {
       margin-bottom: 0;
     }
   }
 
-  .btn-menu:before {
-    font-size: $font-size-l;
+  .btn-menu {
+    @media(max-width: $bp-small) {
+      padding-left: 0;
+    }
+    &:before {
+      font-size: $font-size-l;
+      @media(max-width: $bp-small) {
+        font-size: 1.3em;
+        padding-right: 0;
+      }
+    }
   }
 }
 
@@ -302,18 +332,12 @@ form#header-search {
   }
 }
 
-.embedded-searchbar form,
+header.global-header .embedded-searchbar form,
 form#header-search {
   input[type="submit"] {
     display: none;
   }
 }
-
-body._.__index .to-top a,
-body._.__index a#top {
-  display: none;
-}
-
 
 body:not(.__index) header.global-header {
   .index-page-logo {
