--- a/source/layouts/_additional-scripts.erb
+++ b/source/layouts/_additional-scripts.erb
@@ -53,15 +53,15 @@
 </script>
 
 <!-- CrazyEgg Tracking Script -->
-  <script type="text/javascript">
+<!--   <script type="text/javascript">
   setTimeout(function(){var a=document.createElement("script");
   var b=document.getElementsByTagName("script")[0];
   a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0055/2990.js?"+Math.floor(new Date().getTime()/3600000);
   a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-  </script>
+  </script> -->
 
 <!-- Munchkin Marketo Script -->
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   (function() {
     var didInit = false;
 
@@ -84,4 +84,4 @@
     s.onload = initMunchkin;
     document.getElementsByTagName('head')[0].appendChild(s);
   })();
-</script>
+</script> -->
