--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -1,14 +1,15 @@
 <div class="copyright">
-  <a href='https://pivotal.io/privacy-policy'>Privacy Policy</a> | 
-  <a href='https://pivotal.io/terms-of-use'>Terms of Use</a>
+  <a href='https://pivotal.io/privacy-policy'  target="_blank">Privacy Policy</a> | 
+  <a href='https://pivotal.io/terms-of-use'  target="_blank">Terms of Use</a>
   <div id="teconsent"></div>
-    <script async="async" src=//consent.trustarc.com/notice?domain=pivotal.com&c=teconsent&js=nj&text=true&pcookie crossorigin="">
-</script>
 
   <br/>
   <a href='/'>Pivotal Documentation</a>
-  &copy; <%= Time.now.year %> <a href='https://pivotal.io'>Pivotal Software</a>, Inc. All Rights Reserved.
+  &copy; <%= Time.now.year %> <a href='https://pivotal.io' target="_blank">Pivotal Software</a>, Inc. All Rights Reserved.
+  <br/>
+  <br/>
 </div>
 <div class="support">
   Need help? <a href="<%=vars.support_url%>" target="_blank">Visit Support</a>
 </div>
+
