--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -148,9 +148,10 @@ header.global-header {
         }
       }
     }
-    #contact-header-item {
+    #docs-header-item {
       a {
         font-weight: 600;
+        color: #1b78b3;
       }
     }
   }
