Revisions to anchor locking + remove blue font [#162293885]

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -608,25 +608,20 @@ body.partners.has-subnav {
   }
 }
 
-a:not([href]) {
-  display: block;
-  position: relative;
-  top: -130px;
-  visibility: hidden;
-  @media(max-width: 992px) {
-    top: -80px;
+
+@media (min-width: 700px) {
+  h2 > a:before,
+  h3 > a:before {
+    height: 113px;
+    margin: -113px 0 0;
+  }
+  .nav-container {
+    top: 80px;
   }
 }
-
-a.sidenav-title {
-  display: block;
-  top: 0;
-  @media (min-width: 43.75em) {
-    display: none;
-    top: 0;
-  }
-  @media(max-width: 992px) {
-    top: 0;
+ @media (min-width: 993px) {
+  .has-subnav div.nav-container {
+    top: 100px;
   }
 }
 
