Adjust anchor and super nav css Update link without href style for sidenav-title Revisions to anchor locking + remove blue font [#162293885]

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -608,3 +608,22 @@ body.partners.has-subnav {
   }
 }
 
+
+@media (min-width: 700px) {
+  h2 > a:before,
+  h3 > a:before {
+    height: 113px;
+    margin: -113px 0 0;
+  }
+  .nav-container {
+    top: 80px;
+  }
+}
+ @media (min-width: 993px) {
+  .has-subnav div.nav-container {
+    top: 100px;
+  }
+}
+
+
+
