--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -148,7 +148,7 @@ header.global-header {
         }
       }
     }
-    #contact-header-item {
+    #docs-header-item {
       a {
         font-weight: 600;
       }
