Make global header proxima nova [#162620886]

--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -17,6 +17,7 @@
 header.global-header {
   background-color: #232B2F;
   // line-height: 64px;
+  font-family: "Proxima Nova", sans-serif;
   padding: 0;
   border: none;
 
